# online_model_learning

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CNF_PERFORMANCE_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  MODEL_CONSTRUCTION_VALIDATION.md  Makefile  OLAM_VALIDATION_REPORT.md  README.md  check_results.sh  checkpoint_metrics.csv  command_olam results  docker-compose.yml  monitor_experiment.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run command
.claude/: install.sh  test_doc_sync.sh  test_docker_compat.sh
archive/: UNIFIED_PLANNING_GUIDE_OLD_ARCHITECTURE.md
configs/: README.md  challenging_domains.yaml  experiment.yaml  experiment_blocksworld.yaml  experiment_depots.yaml  experiment_gripper.yaml  experiment_logistics.yaml  experiment_rover.yaml  experiment_rover_extended.yaml  full_benchmark_suite.yaml  full_validation_experiment.yaml  information_gain_blocksworld.yaml  information_gain_blocksworld_300.yaml  information_gain_depots_300.yaml  information_gain_depots_500iter.yaml  information_gain_gripper.yaml  information_gain_gripper_300.yaml  information_gain_logistics.yaml  information_gain_logistics_300.yaml  information_gain_rover.yaml  olam_blocksworld_300.yaml  olam_depots_300.yaml  olam_depots_500iter.yaml  olam_depots_test.yaml  olam_gripper_300.yaml  olam_logistics_300.yaml  olam_logistics_test.yaml  quick_test.yaml  test_dense_checkpoints.yaml
docs/: ALGORITHM_COMPARISON_SEMANTICS.md  DEVELOPMENT_RULES.md  DOCUMENTATION_MAP.md  EXPERIMENT_CONFIGURATION_GUIDE.md  HIGH_PRIORITY_IMPLEMENTATION_SUMMARY.md  (+11 more)
(+484 files in other folders)
