[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["information_gain_aml", "information_gain_aml.algorithms", "information_gain_aml.core"]

[project]
name = "information-gain-aml"
version = "0.3.0"
description = "CNF/SAT-based information-theoretic online action model learning"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "python-sat>=1.8.dev22",
    "unified-planning>=1.2.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
experiments = [
    "unified-planning[fast-downward]>=1.2.0",
    "numpy>=1.21.0,<3.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
]
minimization = ["pyeda>=0.28.0"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = "pysat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unified_planning.*"
ignore_missing_imports = true
follow_imports = "skip"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
